--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>UAS Ionic</title>
 
   <base href="/" />
 
@@ -17,6 +17,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-app.js"></script>
+  
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCASREX3DvG_6gUdqZsZW0q0f82ZHQawMs" async defer></script>
 </head>
 
 <body>
